Kube-files/Loadbalancer-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-frontend
  labels:
    app: loadbalancer-frontend-label
spec:
  type: LoadBalancer
  selector:
    dl: lms
    app: frontend
  ports:
    - port: 80
      targetPort: 80
