Kube-files/cluster-ip-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-backend
  labels:
    app: cluster-ip-backend-label
spec:
  type: ClusterIP
  selector:
    dl: lms
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
