Kube-files/clusterip-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-frontend
  labels:
    app: clusterip-frontend-label
spec:
  selector:
    dl: lms
    app: frontend
  ports:
    - port: 80
      targetPort: 80
